--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -7,7 +7,7 @@
     aria-controls="main-menu"
     aria-label="메인 메뉴 열기/닫기">
     <img src="./assets/img/logo_tree_white.png" alt="메뉴 아이콘" />
-</button>
+  </button>
 
   <!-- navi bar -->
   <nav class="navbar" role="navigation" aria-label="Main navigation">
@@ -31,9 +31,9 @@
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         <a href="프로그램.html">프로그램</a>
         <ul class="nav-sub" role="menu" aria-label="프로그램 하위 메뉴">
-          <li role="menuitem"><a href="프로그램.html">산책명상</a></li>
-          <li role="menuitem"><a href="프로그램.html">명상</a></li>
-          <li role="menuitem"><a href="프로그램.html">원예</a></li>
+          <li role="menuitem"><a href="산책명상.html">산책명상</a></li>
+          <li role="menuitem"><a href="명상.html">명상</a></li>
+          <li role="menuitem"><a href="원예.html">원예</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0"><a href="shop.html">Shop</a></li>
