--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1507,13 +1507,21 @@ body.modal-open {
   }
 }
 
+@media (min-width: 720px) {
+  .program-grid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 960px) {
   .program-hero__grid {
     grid-template-columns: minmax(0, 1.05fr) minmax(0, 0.85fr);
   }
+}
 
+@media (min-width: 1140px) {
   .program-grid {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
