--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-divider"></div>
 
   <div class="footer-left">
-    <img class="footer-logo" src="./assets/img/가시림로고_텍스트.png" alt="가시림 로고" width="160" height="48" />
+    <img class="footer-logo" src="./assets/img/logo_text_white.png" alt="가시림 로고" width="160" height="48" />
 
     <address class="footer-contact">
       <span class="footer-contact__item">전화 | <a href="tel:07042810906">070-4281-0906</a></span>
@@ -22,10 +22,10 @@
           <path d="M21.6 6.2a2.5 2.5 0 0 0-1.76-1.77C18.1 4 12 4 12 4s-6.1 0-7.84.43A2.5 2.5 0 0 0 2.4 6.2 26.7 26.7 0 0 0 2 12a26.7 26.7 0 0 0 .4 5.8 2.5 2.5 0 0 0 1.76 1.77C5.9 20 12 20 12 20s6.1 0 7.84-.43A2.5 2.5 0 0 0 21.6 17.8 26.7 26.7 0 0 0 22 12a26.7 26.7 0 0 0-.4-5.8ZM10.5 15.3V8.7L16 12Z"/>
         </svg>
       </a>
-      <a href="https://pf.kakao.com/" aria-label="KakaoTalk" class="social-btn" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.facebook.com/" aria-label="Facebook" class="social-btn" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 24 24" class="icon" aria-hidden="true" focusable="false">
-          <path d="M12 3.5c-5.11 0-9.25 3.25-9.25 7.26 0 2.66 1.9 4.97 4.75 6.16L6 21.5l4.4-3.06c.51.06 1.03.09 1.56.09 5.11 0 9.25-3.25 9.25-7.26S17.11 3.5 12 3.5Z"/>
-          <path d="M8.1 10.06h1.34v3.27H8.1Zm3.06 0h1.24l.02 1.73 1.41-1.73h1.35l-1.63 1.87 1.7 2.01h-1.42l-1.39-1.69-.04 1.69h-1.24Zm-4.82 0H5v3.27h1.34Zm9.68 0h-1.44v3.27h1.44Zm-5.73-.88a.88.88 0 1 1-.88-.88.88.88 0 0 1 .88.88Z" fill="#fff"/>
+          <path d="M13.34 21h-2.78v-7.49H8.6v-2.4h1.96V9.23c0-2 1.3-3.73 4.12-3.73 1.17 0 2.03.11 2.03.11l-.07 2.27s-.88-.01-1.83-.01c-1.03 0-1.19.47-1.19 1.24v1.4h3.08l-.13 2.4h-2.95V21Z"/>
+          <path d="M12 22.75A10.75 10.75 0 1 1 22.75 12 10.76 10.76 0 0 1 12 22.75Zm0-19.5A8.75 8.75 0 1 0 20.75 12 8.76 8.76 0 0 0 12 3.25Z"/>
         </svg>
       </a>
     </div>
