--- a/partials/footer.html
+++ b/partials/footer.html
@@ -40,7 +40,7 @@
 
   <nav class="footer-col" aria-label="방문 메뉴">
     <h4 class="footer-topic">방문</h4>
-    <a class="footer-link" href="방문.html#운영시간">위치 및 운영 안내</a>
+    <a class="footer-link" href="방문.html#운영시간">운영 시간</a>
     <a class="footer-link" href="방문.html#이용요금">이용 요금</a>
     <a class="footer-link" href="방문.html#편의시설">편의 시설</a>
     <a class="footer-link" href="방문.html#오시는길">오시는 길</a>
@@ -57,7 +57,8 @@
 
   <nav class="footer-col" aria-label="Shop 메뉴">
     <h4 class="footer-topic">Shop</h4>
-    <a class="footer-link" href="shop.html#shop-heading">Shop 소개</a>
-    <a class="footer-link" href="shop.html#shop-catalog">상품 목록</a>
+    <a class="footer-link" href="shop.html?category=plant_pot">화분</a>
+    <a class="footer-link" href="shop.html?category=gardening">종자</a>
+    <a class="footer-link" href="shop.html?category=tea">차</a>
   </nav>
 </footer>
