--- a/partials/footer.html
+++ b/partials/footer.html
@@ -6,9 +6,9 @@
     <img class="footer-logo" src="./assets/img/footer-logo.png" alt="가시림 로고" width="160" height="48" />
 
     <address class="footer-contact">
-      <span class="footer-contact__item">전화 | <a href="tel:07042810906">070-4281-0906</a></span>
-      <span class="footer-contact__item">주소 | <a href="https://maps.google.com/?q=제주특별자치도+서귀포시+표선면+녹산로5번길+171" target="_blank" rel="noopener noreferrer">제주특별자치도 서귀포시 표선면 녹산로5번길 171</a></span>
-      <span class="footer-contact__item">이메일 | <a href="mailto:jejugaisirm@gmail.com">jejugaisirm@gmail.com</a></span>
+      <span class="footer-contact__item"><a href="tel:07042810906">070-4281-0906</a></span>
+      <span class="footer-contact__item"><a href="https://maps.google.com/?q=제주특별자치도+서귀포시+표선면+녹산로5번길+171" target="_blank" rel="noopener noreferrer">제주특별자치도 서귀포시 표선면 녹산로5번길 171</a></span>
+      <span class="footer-contact__item"><a href="mailto:jejugaisirm@gmail.com">jejugaisirm@gmail.com</a></span>
     </address>
 
     <div class="footer-social">
@@ -22,7 +22,7 @@
           <path d="M21.6 6.2a2.5 2.5 0 0 0-1.76-1.77C18.1 4 12 4 12 4s-6.1 0-7.84.43A2.5 2.5 0 0 0 2.4 6.2 26.7 26.7 0 0 0 2 12a26.7 26.7 0 0 0 .4 5.8 2.5 2.5 0 0 0 1.76 1.77C5.9 20 12 20 12 20s6.1 0 7.84-.43A2.5 2.5 0 0 0 21.6 17.8 26.7 26.7 0 0 0 22 12a26.7 26.7 0 0 0-.4-5.8ZM10.5 15.3V8.7L16 12Z"/>
         </svg>
       </a>
-      <a href="https://www.facebook.com/" aria-label="Facebook" class="social-btn" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.facebook.com/jeju.gasirim/" aria-label="Facebook" class="social-btn" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 24 24" class="icon" aria-hidden="true" focusable="false">
           <path d="M13.34 21h-2.78v-7.49H8.6v-2.4h1.96V9.23c0-2 1.3-3.73 4.12-3.73 1.17 0 2.03.11 2.03.11l-.07 2.27s-.88-.01-1.83-.01c-1.03 0-1.19.47-1.19 1.24v1.4h3.08l-.13 2.4h-2.95V21Z"/>
           <path d="M12 22.75A10.75 10.75 0 1 1 22.75 12 10.76 10.76 0 0 1 12 22.75Zm0-19.5A8.75 8.75 0 1 0 20.75 12 8.76 8.76 0 0 0 12 3.25Z"/>
